src/tests/testfiles/function-declarations/17.txt
Error at 2:5: Incompatible conversion returning 'void *' from a function with result type 'void'
return a;
^
